objects/bofc__BOFCLayoutMatrixChildObject__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCLayoutMatrixObject__c</fullName>
        <label>BOFCLayoutMatrixObject</label>
        <referenceTo>bofc__BOFCLayoutMatrixObject__c</referenceTo>
        <relationshipLabel>BOFCLayoutMatrixChildObject</relationshipLabel>
        <relationshipName>BOFCLayoutMatrixChildObject</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__sLayouts__c</fullName>
        <label>sLayouts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BOFCLayoutMatrixChildObject</label>
    <nameField>
        <displayFormat>BLMCO-{0000}</displayFormat>
        <label>BOFCLayoutMatrixChildObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCLayoutMatrixChildObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>